--- a/app/src/main/res/layout/activity_danh_sach_tai_khoan.xml
+++ b/app/src/main/res/layout/activity_danh_sach_tai_khoan.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Cac_Loai_San_Pham.Laptop">
+    tools:context=".Quan_Tri_Vien.DanhSachTaiKhoan">
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
         android:layout_width="0dp"
@@ -19,7 +19,7 @@
         app:queryHint="Tìm kiếm ..." />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvList1"
+        android:id="@+id/rvList_danh_sach_tai_khoan"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
@@ -30,6 +30,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchView"
         app:layout_constraintVertical_bias="1.0" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
