--- a/app/src/main/res/layout/content_bar.xml
+++ b/app/src/main/res/layout/content_bar.xml
@@ -14,9 +14,10 @@
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/purple"
+            android:background="@color/white"
+            app:menu="@menu/toolbar_menu"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:titleTextColor="@color/white"/>
+            app:titleTextColor="@color/black"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -26,6 +27,5 @@
         android:id="@+id/activityContainer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout"/>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
