--- a/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_dang_anh"
-    tools:context=".Xy_Ly_Danh_Sach.chi_tiet_san_pham">
+    tools:context=".Xu_Ly_Danh_Sach.chi_tiet_san_pham">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -155,4 +155,4 @@
         </RelativeLayout>
 
     </RelativeLayout>
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
