--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -18,6 +18,10 @@
                         android:icon="@drawable/baseline_mui_ten"/>
                     <item android:id="@+id/nav_5" android:title="Danh Sách Tài Khoản"
                         android:icon="@drawable/baseline_mui_ten"/>
+                    <item android:id="@+id/nav_6" android:title="Danh Sách Đặt Hàng"
+                        android:icon="@drawable/baseline_mui_ten"/>
+                    <item android:id="@+id/nav_7" android:title="Đơn Hàng Đã̃ Xác Nhận"
+                        android:icon="@drawable/baseline_mui_ten"/>
                 </group>
             </menu>
         </item>
